FlightPath 5.x Changelog
========================

2018-04-07
  Fixed some small display issues in AdvisingScreen, to keep PHP notices from appearing.


2018-03-29
  Made a bug fix to where a pie chart would display 99 if its value was above 100.  Instead, this was changed to 100.
  
  Fixed a bug in get_term_structure() where the abbreviation and long description were switched.

  Modified the CourseList::remove_previously_fulfilled() function, where it uses find_best_match() to find a match
  for a course, instead of the parent's find_match() function.  This allows for hooks to be used, as well as the
  school's sorting/matching policy to be used.  Special thanks to Logan Buth. 
  
  Added new methods & updated existing in CourseList: sort_largest_hours_first(), and made modifications to find_best_grade_match()
  and sort_best_grade_first().  This was to correct a subtle bug which appeared if a student took a non-repeatable course twice,
  and received the same grade both times, but had different hours.  For example, if a student earned 0 hours on one attempt,
  and 4 hours on the next.  Special thanks to Logan Buth.
  

2018-03-17
  Fixed subtle bug where substitutions are sometimes displayed more than once in a group.  Special thanks to Logan Buth.
  

2018-03-15
  Fixed bug with pie charts code (from older version of pchart) that was incompatible with PHP7.
  

2018-03-14
  Fixed bug where min grade requirements was being ignored for a newly-created course, when the original course was
  partially filled by a substitution.  Thanks to Logan Buth.
  
  Added new load_degree_plan_ancillary() method to _DegreePlan.  This lets us load just the 'ancillary' data for a degree-- title, advising weight, track
  configs, etc., without having to load the entire degree.  At the moment, it is used primarily on the What If selection form.
  
    
2018-03-11