@@ -3,6 +3,8 @@ FlightPath 5.x Changelog
 
 2018-04-07
   Fixed some small display issues in AdvisingScreen, to keep PHP notices from appearing.
+  
+  Added new hook, hook_theme_advise_degree_header_row, with special thanks to Logan Buth.
 
 
 2018-03-29
